# retro-boy-game

./: .gitignore  CMakeLists.txt  LICENSE
.cache/clangd/index/: Boy.cpp.28A3CC44E36C811B.idx  Boy.hpp.1A01029242DA0889.idx  Map.cpp.08B722E4B6BD80D2.idx  Map.hpp.58F2A3E6B8905477.idx  main.cpp.66E6ABC218491C4A.idx
.github/workflows/: release.yml
RetroBoy/RetroBoy/: RetroBoy.cpp
assets/levels/: level1.txt
docs/: Grim walk ver 1.psd  Grim.psd  Player.psd  bricks.psd
src/: Game.cpp  main.cpp
src/Entities/: Boy.cpp  Boy.hpp  Player.cpp  Player.hpp
src/World/: Map.cpp  Map.hpp
